# VOT_2022_challenge_replication

./: CMakeLists.txt  main_demo.cpp  main_vot.cpp  vot.hpp
src/: colotracker.h
